--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div><h1>Wevsite</h1></div>
+    <div><h1>Website</h1></div>
     <div>Hello World</div>
     <div>FARHAN WASEER</div>
 </body>
