--- a/index.html
+++ b/index.html
@@ -1,11 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>Document</title>
+    <title>Home</title>
+    <style>
+        *{
+            margin: 0;
+            padding: 0;
+            font-family: verdana;
+        }
+        #main{
+            width: 100%;
+            height: 100vh;
+            background-image: url('https://get.pxhere.com/photo/background-calm-clouds-daylight-dock-environment-grass-lake-landscape-looking-man-mountain-mountains-outdoors-person-reflections-rocks-scenery-scenic-serene-sitting-sky-tranquil-trees-view-water-wooden-woods-1563785.jpg');
+            background-size: cover;
+        }
+        nav{
+            width: 100%;
+            height: 50px;
+            background-color: #0009;
+            line-height: 50px;
+            
+        }
+        nav ul{
+            float: right;
+            margin-right: 30px;
+        }
+        nav ul li{
+            list-style-type: none;
+            display: inline-block;
+        }
+        nav ul li:hover{
+            background-color: rgba(226, 221, 221, 0.822);
+        }
+        nav ul li a{
+            text-decoration: none;
+            font-size: 18px;
+            color: aliceblue;
+            padding: 20px;
+        }
+        </style>
 </head>
-<body>
-    <div><h1>Website</h1></div>
-    <div>Hello World</div>
-    <div>FARHAN WASEER</div>
+<body>  
+    <div id="main">
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Details</a></li>
+            <li><a href="#">Contect</a></li>
+        </ul>
+    </nav>
+</div>
+<h1>FARHAN WASEER</h1>
 </body>
 </html>
